--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-modern-drawer": "^1.4.0",
     "sharp": "^0.34.3",
     "zustand": "^5.0.6"
   },
